# motor_control_ros

./: CMakeLists.txt  package.xml
include/motor_control_ros/: .haptic_config.h.swp  config_map.h  ecattype.h  ethercat.h  haptic_config.h  init_BEL.h  rdda_test.h  rdda_type.h  ros_interface.h  slave_init.h  soem_wrappers.h
include/nodes/: rdd_node.h
src/motor_control_ros/: config_SDOparam.c  config_map.c  controller.c  haptic_config.c  haptic_run.cpp  init_BEL.c  rdda_funcs.c  rdda_run.cpp  rdda_test.c  ros_interface.cpp  simple_test.c  simple_test.cpp  slave_init.c  slaveinfo.c
src/nodes/: .rdd_node.cpp.swp  rdd_node.cpp
